# deco-assaying

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSING.md  README.md  REUSE.toml  docker-compose.yml  humans_notes.md  pyproject.toml
.github/workflows/: license-check.yml  release.yml
docs/: deco-assaying-architecture.md  dependency-update-automation.md  future_features.md
src/deco_assaying/: __init__.py  __main__.py  analyze.py  app.py  chunks.py  config.py  detectors.py  github.py  gitlab.py  jobs.py  languages.py  literals.py  manifest.py  outputs.py  prompts.py  providers.py  retention.py  routes.py  source.py  walker.py
src/deco_assaying/analyzers/: __init__.py  _base.py  _fallback.py  _ts_js.py  bash.py  c.py  c_family.py  cpp.py  csharp.py  go.py  java.py  javascript.py  php.py  python.py  ruby.py  rust.py  typescript.py
src/parkview_codeparse/: __init__.py  __main__.py  analyze.py  app.py  config.py  github.py  jobs.py  languages.py  manifest.py  routes.py  source.py  walker.py
src/parkview_codeparse/analyzers/: __init__.py  _ts_js.py  bash.py  c.py  c_family.py  cpp.py  csharp.py  go.py  java.py  javascript.py  php.py  ruby.py  rust.py  typescript.py
tests/: conftest.py  test_analyze_fallback.py  test_analyze_other_langs.py  test_analyze_python.py  test_chunks.py  test_detectors.py  test_github.py  test_gitlab.py  test_http_routes.py  test_index_repo.py  test_languages.py  test_literals.py  test_mcp_artifact_tools.py  test_mcp_prompts.py  test_outputs_http.py  test_retention.py  test_source.py  test_streaming.py  test_walker.py  test_walker_lazy.py
