[project]
name = "parkview-codeparse-server"
version = "0.1.0"
description = "MCP server that performs tree-sitter-based source code analysis for the Cobgrind LLM-Wiki daemon."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.0",
    "fastapi",
    "uvicorn[standard]",
    "starlette",
    "pydantic",
    "tree-sitter",
    "tree-sitter-language-pack<1.6",  # 1.6+ only ships cp314 wheels at present
    "pathspec",
]

[project.scripts]
parkview-codeparse = "parkview_codeparse.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parkview_codeparse"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.13"
