# SPDX-FileCopyrightText: 2026 Gary Frattarola <garyf@parkviewlab.ai>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[project]
name = "deco-assaying"
version = "0.3.2"
description = "MCP server that performs tree-sitter-based source code analysis."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Gary Frattarola", email = "garyf@parkviewlab.ai" }]
dependencies = [
    "mcp[cli]>=1.27.0",
    "fastapi",
    "uvicorn[standard]",
    "starlette>=1.0.1",  # GHSA-86qp-5c8j-p5mr: Host-header validation (fixed 1.0.1)
    "pydantic",
    "tree-sitter",
    "tree-sitter-language-pack<1.6",  # 1.6+ only ships cp314 wheels at present
    "pathspec",
]

[project.scripts]
deco-assaying = "deco_assaying.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deco_assaying"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that require outbound network access (e.g. git clone of a public GitHub repo)",
]

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.13"
